--- a/Demo/Demo/Info.plist
+++ b/Demo/Demo/Info.plist
@@ -22,6 +22,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER) would like to use your photo library.</string>
 	<key>UILaunchStoryboardName</key>
